--- a/default.ini
+++ b/default.ini
@@ -32,7 +32,7 @@ custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`🔰 节点选择`select`[]✈ 手动选择`[]✈ 延迟最低`[]✈ 故障切换`[]DIRECT
 custom_proxy_group=✈ 手动选择`select`[]🇭🇰 香港`
 custom_proxy_group=🇭🇰 香港IPLC`select`(IPLC)
-custom_proxy_group=🇭🇰 香港`select`(香港 *(?!游戏|阿里云|港深专线))
+custom_proxy_group=🇭🇰 香港`select`((?!单端口.*)香港.*(?<!游戏|阿里云|港深专线))
 custom_proxy_group=✈ 延迟最低`url-test`.*`http://www.gstatic.com/generate_204`500
 custom_proxy_group=✈ 故障切换`fallback`.*`http://www.gstatic.com/generate_204`500
 ;设置分组标志位
