--- a/default.ini
+++ b/default.ini
@@ -25,7 +25,7 @@ custom_proxy_group=✈ 延迟最低`url-test`.*`http://www.gstatic.com/generate_
 custom_proxy_group=✈ 故障切换`fallback`.*`http://www.gstatic.com/generate_204`500
 custom_proxy_group=📲 电报吹水`select`[]🔰 节点选择`[]✈ 手动选择`[]✈ 延迟最低`[]✈ 故障切换`(狮城|新)
 custom_proxy_group=📹 YouTube`select`[]🔰 节点选择`[]✈ 手动选择`[]✈ 延迟最低`[]✈ 故障切换
-custom_proxy_group=🎥 NETFLIX`select`[]🔰 节点选择`[]✈ 手动选择`[]✈ 延迟最低`[]✈ 故障切换`(NF|解锁)
+custom_proxy_group=🎥 NETFLIX`select`[]🔰 节点选择`[]✈ 手动选择`[]✈ 延迟最低`[]✈ 故障切换`(NF|Netflix|解锁)
 custom_proxy_group=📺 巴哈姆特`select`[]🔰 节点选择`[]✈ 手动选择`[]✈ 延迟最低`[]✈ 故障切换`(台)
 custom_proxy_group=🌍 国外媒体`select`[]🔰 节点选择`[]✈ 手动选择`[]✈ 延迟最低`[]✈ 故障切换`[]DIRECT
 custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]🔰 节点选择`[]✈ 手动选择`[]✈ 延迟最低
