--- a/default.ini
+++ b/default.ini
@@ -2,16 +2,15 @@
 
 ;设置规则标志位
 surge_ruleset=DIRECT,rules/ConnersHua/Surge/Ruleset/Unbreak.list
-surge_ruleset=🛑 全球拦截,rules/NobyDa/Surge/AdRule.list
-surge_ruleset=🛑 全球拦截,rules/ConnersHua/Surge/Ruleset/Hijacking.list
-surge_ruleset=📹 YouTube,rules/ConnersHua/Surge/Ruleset/Media/YouTube.list
+surge_ruleset=REJECT,rules/NobyDa/Surge/AdRule.list
+surge_ruleset=REJECT,rules/ConnersHua/Surge/Ruleset/Hijacking.list
 surge_ruleset=🎥 NETFLIX,rules/ConnersHua/Surge/Ruleset/Media/Netflix.list
 surge_ruleset=📺 巴哈姆特,rules/ConnersHua/Surge/Ruleset/Media/Bahamut.list
 surge_ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/GlobalMedia.list
-surge_ruleset=🌏 国内媒体,rules/lhie1/Surge3/Domestic.list
+surge_ruleset=DIRECT,rules/lhie1/Surge3/Domestic.list
 surge_ruleset=📲 电报吹水,rules/ConnersHua/Surge/Ruleset/Telegram.list
 surge_ruleset=🔰 节点选择,rules/ConnersHua/Surge/Ruleset/Global.list
-surge_ruleset=🍎 苹果服务,rules/ConnersHua/Surge/Ruleset/Apple.list
+surge_ruleset=DIRECT,rules/ConnersHua/Surge/Ruleset/Apple.list
 surge_ruleset=DIRECT,rules/ConnersHua/Surge/Ruleset/China.list
 surge_ruleset=DIRECT,rules/NobyDa/Surge/Download.list
 surge_ruleset=DIRECT,[]GEOIP,CN
@@ -19,17 +18,19 @@ surge_ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🔰 节点选择`select`[]✈ 手动选择`[]✈ 延迟最低`[]✈ 故障切换`[]DIRECT
+custom_proxy_group=🔰 节点选择`select`[]✈ 手动选择`[]🇭🇰 香港IPLC`[]🇭🇰 香港`[]🇨🇳 阿里云`[]🇨🇳 台湾`[]🇺🇸 美国`[]🇯🇵 日本`[]🛫 其他`[]🚀 专线`[]DIRECT
+custom_proxy_group=📲 电报吹水`select`[]🔰 节点选择`[]DIRECT`(新加坡)
+custom_proxy_group=🎥 NETFLIX`select`[]🔰 节点选择`[]DIRECT`(NF|Netflix|解锁)
+custom_proxy_group=📺 巴哈姆特`select`[]🔰 节点选择`[]🇨🇳 台湾`[]DIRECT
+custom_proxy_group=🌍 国外媒体`select`[]🔰 节点选择`[]🇭🇰 香港IPLC`[]🇭🇰 香港`[]🇨🇳 阿里云`[]🇨🇳 台湾`[]🇺🇸 美国`[]🇯🇵 日本`[]🛫 其他`[]🚀 专线`[]DIRECT
+custom_proxy_group=🐟 漏网之鱼`select`🔰 节点选择`[]DIRECT
+custom_proxy_group=🇭🇰 香港IPLC`select`(IPLC)
+custom_proxy_group=🇭🇰 香港`urltest`((?<!单端口香港)(HKT|HKBN|WTT))`http://www.gstatic.com/generate_204`500
+custom_proxy_group=🇨🇳 阿里云`select`(阿里云)`http://www.gstatic.com/generate_204`500
+custom_proxy_group=🇨🇳 台湾`url-test`((?<!单端口)台)`http://www.gstatic.com/generate_204`500
+custom_proxy_group=🇺🇸 美国`url-test`(美国)`http://www.gstatic.com/generate_204`500
+custom_proxy_group=🇯🇵 日本`url-test`(日本)`http://www.gstatic.com/generate_204`500
+custom_proxy_group=🛫 其他`select`(德|韩|俄|英|土耳其)
+custom_proxy_group=🚀 专线`select`(游戏|专线)
 custom_proxy_group=✈ 手动选择`select`.*
-custom_proxy_group=✈ 延迟最低`url-test`.*`http://www.gstatic.com/generate_204`500
-custom_proxy_group=✈ 故障切换`fallback`.*`http://www.gstatic.com/generate_204`500
-custom_proxy_group=📲 电报吹水`select`[]🔰 节点选择`[]✈ 手动选择`[]✈ 延迟最低`[]✈ 故障切换
-custom_proxy_group=📹 YouTube`select`[]🔰 节点选择`[]✈ 手动选择`[]✈ 延迟最低`[]✈ 故障切换
-custom_proxy_group=🎥 NETFLIX`select`[]🔰 节点选择`[]✈ 手动选择`[]✈ 延迟最低`[]✈ 故障切换`(NF|Netflix|解锁)
-custom_proxy_group=📺 巴哈姆特`select`[]🔰 节点选择`[]✈ 手动选择`[]✈ 延迟最低`[]✈ 故障切换`(台)
-custom_proxy_group=🌍 国外媒体`select`[]🔰 节点选择`[]✈ 手动选择`[]✈ 延迟最低`[]✈ 故障切换`[]DIRECT
-custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]🔰 节点选择`[]✈ 手动选择`[]✈ 延迟最低
-custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🔰 节点选择`[]✈ 手动选择`[]✈ 延迟最低`[]✈ 故障切换
-custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`🔰 节点选择`select`[]✈ 手动选择`[]✈ 延迟最低`[]✈ 故障切换`[]DIRECT
 ;设置分组标志位
