--- a/default.ini
+++ b/default.ini
@@ -18,15 +18,15 @@ surge_ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🔰 节点选择`select`[]✈ 手动选择`[]🇭🇰 香港IPLC`[]🇭🇰 香港`[]🇨🇳 阿里云`[]🇨🇳 台湾`[]🇺🇸 美国`[]🇯🇵 日本`[]🛫 其他`[]🚀 专线`[]DIRECT
+custom_proxy_group=🔰 节点选择`select`[]✈ 手动选择`[]🇭🇰 香港IPLC`[]🇨🇳 阿里云`[]🇭🇰 香港`[]🇨🇳 台湾`[]🇺🇸 美国`[]🇯🇵 日本`[]🛫 其他`[]🚀 专线`[]DIRECT
 custom_proxy_group=📲 电报吹水`select`[]🔰 节点选择`[]DIRECT`(新加坡)
-custom_proxy_group=🎥 NETFLIX`select`[]🔰 节点选择`[]DIRECT`(NF|Netflix|解锁)
+custom_proxy_group=🎥 Netflix`select`[]🔰 节点选择`[]DIRECT`(NF|Netflix|解锁)
 custom_proxy_group=📺 巴哈姆特`select`[]🔰 节点选择`[]🇨🇳 台湾`[]DIRECT
-custom_proxy_group=🌍 国外媒体`select`[]🔰 节点选择`[]🇭🇰 香港IPLC`[]🇭🇰 香港`[]🇨🇳 阿里云`[]🇨🇳 台湾`[]🇺🇸 美国`[]🇯🇵 日本`[]🛫 其他`[]🚀 专线`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`🔰 节点选择`[]DIRECT
+custom_proxy_group=🌍 国外媒体`select`[]🔰 节点选择`[]🇭🇰 香港IPLC`[]🇨🇳 阿里云`[]🇭🇰 香港`[]🇨🇳 台湾`[]🇺🇸 美国`[]🇯🇵 日本`[]🛫 其他`[]🚀 专线`[]DIRECT
+custom_proxy_group=🐟 漏网之鱼`select`🔰 节点选择`[]DIRECT`[]🇭🇰 香港IPLC`[]🇨🇳 阿里云`[]🇭🇰 香港`[]🇨🇳 台湾`[]🇺🇸 美国`[]🇯🇵 日本`[]🛫 其他`[]🚀 专线
 custom_proxy_group=🇭🇰 香港IPLC`select`(IPLC)
+custom_proxy_group=🇨🇳 阿里云`select`(阿里云)
 custom_proxy_group=🇭🇰 香港`url-test`(WTT|HKT|HKBN)`http://www.gstatic.com/generate_204`500
-custom_proxy_group=🇨🇳 阿里云`select`(阿里云)`http://www.gstatic.com/generate_204`500
 custom_proxy_group=🇨🇳 台湾`url-test`(台)`http://www.gstatic.com/generate_204`500
 custom_proxy_group=🇺🇸 美国`url-test`(美国)`http://www.gstatic.com/generate_204`500
 custom_proxy_group=🇯🇵 日本`url-test`(日本)`http://www.gstatic.com/generate_204`500
