--- a/default.ini
+++ b/default.ini
@@ -4,7 +4,7 @@
 surge_ruleset=DIRECT,rules/ConnersHua/Surge/Ruleset/Unbreak.list
 surge_ruleset=REJECT,rules/NobyDa/Surge/AdRule.list
 surge_ruleset=REJECT,rules/ConnersHua/Surge/Ruleset/Hijacking.list
-surge_ruleset=🎥 NETFLIX,rules/ConnersHua/Surge/Ruleset/Media/Netflix.list
+surge_ruleset=🎥 Netflix,rules/ConnersHua/Surge/Ruleset/Media/Netflix.list
 surge_ruleset=📺 巴哈姆特,rules/ConnersHua/Surge/Ruleset/Media/Bahamut.list
 surge_ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/GlobalMedia.list
 surge_ruleset=DIRECT,rules/lhie1/Surge3/Domestic.list
