--- a/default.ini
+++ b/default.ini
@@ -23,7 +23,7 @@ custom_proxy_group=📲 电报吹水`select`[]🔰 节点选择`[]DIRECT`(新加
 custom_proxy_group=🎥 Netflix`select`[]🔰 节点选择`[]DIRECT`(NF|Netflix|解锁)
 custom_proxy_group=📺 巴哈姆特`select`[]🔰 节点选择`[]🇨🇳 台湾`[]DIRECT
 custom_proxy_group=🌍 国外媒体`select`[]🔰 节点选择`[]🇭🇰 香港IPLC`[]🇨🇳 阿里云`[]🇭🇰 香港`[]🇨🇳 台湾`[]🇺🇸 美国`[]🇯🇵 日本`[]🛫 其他`[]🚀 专线`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`🔰 节点选择`[]DIRECT`[]🇭🇰 香港IPLC`[]🇨🇳 阿里云`[]🇭🇰 香港`[]🇨🇳 台湾`[]🇺🇸 美国`[]🇯🇵 日本`[]🛫 其他`[]🚀 专线
+custom_proxy_group=🐟 漏网之鱼`select`[]🔰 节点选择`[]DIRECT
 custom_proxy_group=🇭🇰 香港IPLC`select`(IPLC)
 custom_proxy_group=🇨🇳 阿里云`select`(阿里云)
 custom_proxy_group=🇭🇰 香港`url-test`(WTT|HKT|HKBN)`http://www.gstatic.com/generate_204`500
