--- a/default.ini
+++ b/default.ini
@@ -21,7 +21,7 @@ surge_ruleset=🐟 漏网之鱼,[]FINAL
 custom_proxy_group=🔰 节点选择`select`[]✈ 手动选择`[]🇭🇰 香港IPLC`[]🇨🇳 阿里云`[]🇭🇰 香港`[]🇨🇳 台湾`[]🇺🇸 美国`[]🇯🇵 日本`[]🛫 其他`[]🚀 专线`[]DIRECT
 custom_proxy_group=📲 电报吹水`select`[]🔰 节点选择`[]DIRECT`(新加坡)
 custom_proxy_group=🎥 Netflix`select`[]🔰 节点选择`[]DIRECT`(NF|Netflix|解锁)
-custom_proxy_group=📺 巴哈姆特`select`[]🔰 节点选择`[]🇨🇳 台湾`[]DIRECT
+custom_proxy_group=📺 巴哈姆特`select`[]🔰 节点选择`[]DIRECT`(台)
 custom_proxy_group=🌍 国外媒体`select`[]🔰 节点选择`[]🇭🇰 香港IPLC`[]🇨🇳 阿里云`[]🇭🇰 香港`[]🇨🇳 台湾`[]🇺🇸 美国`[]🇯🇵 日本`[]🛫 其他`[]🚀 专线`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🔰 节点选择`[]DIRECT
 custom_proxy_group=🇭🇰 香港IPLC`select`(IPLC)
