--- a/default.ini
+++ b/default.ini
@@ -30,7 +30,7 @@ custom_proxy_group=🇭🇰 香港`url-test`(WTT|HKT|HKBN|HK/香港)`http://www.
 custom_proxy_group=🇨🇳 台湾`url-test`(台)`http://www.gstatic.com/generate_204`500
 custom_proxy_group=🇺🇸 美国`url-test`(美国)`http://www.gstatic.com/generate_204`500
 custom_proxy_group=🇯🇵 日本`url-test`(日本)`http://www.gstatic.com/generate_204`500
-custom_proxy_group=🛫 其他`select`(德|韩|俄|英|土耳其)
+custom_proxy_group=🛫 其他`select`(德|韩|俄|英|土耳其|澳门|新加坡)
 custom_proxy_group=🚀 专线`select`(游戏|专线)
 custom_proxy_group=✈ 手动选择`select`.*
 ;设置分组标志位
