--- a/Eazy.ini
+++ b/Eazy.ini
@@ -21,7 +21,7 @@ surge_ruleset=🐟 漏网之鱼,[]FINAL
 ;设置分组标志位
 custom_proxy_group=🔰 节点选择`select`.*
 custom_proxy_group=📲 电报吹水`select`[]🔰 节点选择`[]DIRECT`(新加坡)
-custom_proxy_group=🎥 Netflix`select`[]🔰 节点选择`[]DIRECT`(NF|Netflix|解锁)
+custom_proxy_group=🎥 Netflix`select`[]🔰 节点选择`[]DIRECT`(NF|nf|Netflix|解锁)
 custom_proxy_group=📺 巴哈姆特`select`[]🔰 节点选择`[]DIRECT`(台)
 custom_proxy_group=🌍 国外媒体`select`[]🔰 节点选择`[]DIRECT
 custom_proxy_group=☁️ Onedrive`select`[]🔰 节点选择`[]DIRECT
