--- a/Eazy.ini
+++ b/Eazy.ini
@@ -6,9 +6,8 @@ surge_ruleset=REJECT,rules/NobyDa/Surge/AdRule.list
 surge_ruleset=REJECT,rules/ConnersHua/Surge/Ruleset/Hijacking.list
 surge_ruleset=🎥 Netflix,rules/ConnersHua/Surge/Ruleset/Media/Netflix.list
 surge_ruleset=📺 巴哈姆特,rules/ConnersHua/Surge/Ruleset/Media/Bahamut.list
-surge_ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/GlobalMedia.list
+surge_ruleset=🔰 节点选择,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/GlobalMedia.list
 surge_ruleset=DIRECT,rules/lhie1/Surge3/Domestic.list
-surge_ruleset=📲 电报吹水,rules/ConnersHua/Surge/Ruleset/Telegram.list
 surge_ruleset=🔰 节点选择,rules/ConnersHua/Surge/Ruleset/Global.list
 surge_ruleset=DIRECT,rules/ConnersHua/Surge/Ruleset/Apple.list
 surge_ruleset=DIRECT,rules/ConnersHua/Surge/Ruleset/China.list
@@ -20,10 +19,9 @@ surge_ruleset=🐟 漏网之鱼,[]FINAL
 
 ;设置分组标志位
 custom_proxy_group=🔰 节点选择`select`.*
-custom_proxy_group=📲 电报吹水`select`[]🔰 节点选择`[]DIRECT`(新加坡)
+custom_proxy_group=🌍 国内媒体`select`[]🔰 节点选择`[]DIRECT`(港|澳|台)
 custom_proxy_group=🎥 Netflix`select`[]🔰 节点选择`[]DIRECT`(NF|nf|Netflix|解锁)
 custom_proxy_group=📺 巴哈姆特`select`[]🔰 节点选择`[]DIRECT`(台)
-custom_proxy_group=🌍 国外媒体`select`[]🔰 节点选择`[]DIRECT
 custom_proxy_group=☁️ Onedrive`select`[]🔰 节点选择`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🔰 节点选择`[]DIRECT
 ;设置分组标志位
