--- a/Eazy.ini
+++ b/Eazy.ini
@@ -7,7 +7,7 @@ surge_ruleset=REJECT,rules/ConnersHua/Surge/Ruleset/Hijacking.list
 surge_ruleset=🎥 Netflix,rules/ConnersHua/Surge/Ruleset/Media/Netflix.list
 surge_ruleset=📺 巴哈姆特,rules/ConnersHua/Surge/Ruleset/Media/Bahamut.list
 surge_ruleset=🔰 节点选择,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/GlobalMedia.list
-surge_ruleset=DIRECT,rules/lhie1/Surge3/Domestic.list
+surge_ruleset=🌍 国内媒体,rules/lhie1/Surge3/Domestic.list
 surge_ruleset=🔰 节点选择,rules/ConnersHua/Surge/Ruleset/Global.list
 surge_ruleset=DIRECT,rules/ConnersHua/Surge/Ruleset/Apple.list
 surge_ruleset=DIRECT,rules/ConnersHua/Surge/Ruleset/China.list
