--- a/Eazy.ini
+++ b/Eazy.ini
@@ -1,17 +1,15 @@
 ;不要随意改变关键字，否则会导致出错
 
 ;设置规则标志位
-surge_ruleset=DIRECT,rules/ConnersHua/Surge/Ruleset/Unbreak.list
-surge_ruleset=REJECT,rules/NobyDa/Surge/AdRule.list
-surge_ruleset=REJECT,rules/ConnersHua/Surge/Ruleset/Hijacking.list
-surge_ruleset=🎥 Netflix,rules/ConnersHua/Surge/Ruleset/Media/Netflix.list
-surge_ruleset=📺 巴哈姆特,rules/ConnersHua/Surge/Ruleset/Media/Bahamut.list
+surge_ruleset=DIRECT,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Unbreak.list
+surge_ruleset=REJECT,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Advertising.list
+surge_ruleset=REJECT,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Hijacking.list
+surge_ruleset=🎥 Netflix,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Media/Netflix.list
+surge_ruleset=📺 巴哈姆特,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Media/Bahamut.list
 surge_ruleset=🔰 节点选择,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/GlobalMedia.list
-surge_ruleset=🌍 国内媒体,rules/lhie1/Surge3/Domestic.list
-surge_ruleset=🔰 节点选择,rules/ConnersHua/Surge/Ruleset/Global.list
-surge_ruleset=DIRECT,rules/ConnersHua/Surge/Ruleset/Apple.list
-surge_ruleset=DIRECT,rules/ConnersHua/Surge/Ruleset/China.list
-surge_ruleset=DIRECT,rules/NobyDa/Surge/Download.list
+surge_ruleset=🌍 国内媒体,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/DomesticMedia.list
+surge_ruleset=🔰 节点选择,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Global.list
+surge_ruleset=DIRECT,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/China.list
 surge_ruleset=☁️ Onedrive,https://raw.githubusercontent.com/ddvchlogy/ClashRini/master/Onedrive.list
 surge_ruleset=DIRECT,[]GEOIP,CN
 surge_ruleset=🐟 漏网之鱼,[]FINAL
