--- a/Eazy.ini
+++ b/Eazy.ini
@@ -20,6 +20,6 @@ custom_proxy_group=🔰 节点选择`select`.*
 custom_proxy_group=🌍 国内媒体`select`[]DIRECT`[]🔰 节点选择`(港|澳|台)
 custom_proxy_group=🎥 Netflix`select`[]🔰 节点选择`[]DIRECT`(NF|nf|Netflix|解锁)
 custom_proxy_group=📺 巴哈姆特`select`[]🔰 节点选择`[]DIRECT`(台)
-custom_proxy_group=☁️ Onedrive`select`[]🔰 节点选择`[]DIRECT
+custom_proxy_group=☁️ Onedrive`select`[]DIRECT`[]🔰 节点选择
 custom_proxy_group=🐟 漏网之鱼`select`[]🔰 节点选择`[]DIRECT
 ;设置分组标志位
