--- a/Eazy.ini
+++ b/Eazy.ini
@@ -9,6 +9,7 @@ surge_ruleset=📺 巴哈姆特,https://raw.githubusercontent.com/ConnersHua/Pro
 surge_ruleset=🔰 节点选择,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/GlobalMedia.list
 surge_ruleset=🌍 国内媒体,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/DomesticMedia.list
 surge_ruleset=🔰 节点选择,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Global.list
+surge_ruleset=🔰 节点选择,https://raw.githubusercontent.com/ddvchlogy/ClashRini/master/gameloft.list
 surge_ruleset=DIRECT,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/China.list
 surge_ruleset=☁️ Onedrive,https://raw.githubusercontent.com/ddvchlogy/ClashRini/master/Onedrive.list
 surge_ruleset=DIRECT,[]GEOIP,CN
