--- a/Eazy.ini
+++ b/Eazy.ini
@@ -2,23 +2,24 @@
 
 ;设置规则标志位
 surge_ruleset=DIRECT,https://raw.githubusercontent.com/ddvchlogy/ClashRini/master/Unbreak.list
-surge_ruleset=REJECT,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Advertising.list
-surge_ruleset=REJECT,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Hijacking.list
+surge_ruleset=🛑 全球拦截,https://raw.githubusercontent.com/NobyDa/Script/master/Surge/AdRule.list
+surge_ruleset=🛑 全球拦截,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Advertising.list
+surge_ruleset=🛑 全球拦截,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Hijacking.list
 surge_ruleset=🎥 Netflix,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Media/Netflix.list
 surge_ruleset=📺 巴哈姆特,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Media/Bahamut.list
 surge_ruleset=🔰 节点选择,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/GlobalMedia.list
-surge_ruleset=🌍 国内媒体,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/DomesticMedia.list
 surge_ruleset=🔰 节点选择,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Global.list
 surge_ruleset=🔰 节点选择,https://raw.githubusercontent.com/ddvchlogy/ClashRini/master/Gameloft.list
-surge_ruleset=DIRECT,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/China.list
 surge_ruleset=☁️ Onedrive,https://raw.githubusercontent.com/ddvchlogy/ClashRini/master/Onedrive.list
+surge_ruleset=DIRECT,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/China.list
+surge_ruleset=DIRECT,https://raw.githubusercontent.com/NobyDa/Script/master/Surge/Download.list
 surge_ruleset=DIRECT,[]GEOIP,CN
 surge_ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
 custom_proxy_group=🔰 节点选择`select`.*
-custom_proxy_group=🌍 国内媒体`select`[]DIRECT`[]🔰 节点选择`(港|澳|台)
+custom_proxy_group=🛑 全球拦截`[]REJECT`[]DIRECT
 custom_proxy_group=🎥 Netflix`select`[]🔰 节点选择`[]DIRECT`(NF|nf|Netflix|解锁)
 custom_proxy_group=📺 巴哈姆特`select`[]🔰 节点选择`[]DIRECT`(台)
 custom_proxy_group=☁️ Onedrive`select`[]DIRECT`[]🔰 节点选择
