--- a/Eazy.ini
+++ b/Eazy.ini
@@ -18,7 +18,7 @@ surge_ruleset=🐟 漏网之鱼,[]FINAL
 
 ;设置分组标志位
 custom_proxy_group=🔰 节点选择`select`[]🚀 专线节点`^((?!(IPLC|IPEL|IEPL)).)*$
-custom_proxy_group=🚀 专线节点`select`[]`(IPLC|IPEL|IEPL)
+custom_proxy_group=🚀 专线节点`select`(IPLC|IPEL|IEPL)
 custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]🔰 节点选择`[]DIRECT
 custom_proxy_group=🎥 Netflix`select`[]🔰 节点选择`[]DIRECT`(NF|nf|Netflix|解锁)
 custom_proxy_group=📺 巴哈姆特`select`[]🔰 节点选择`[]DIRECT`(台)
